<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/Register"
        app:titleTextColor="@android:color/white" />

    <TextView
        android:id="@+id/label_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/what_did_you_drink"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <Spinner
        android:id="@+id/spinner_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:entries="@array/drinks"
        app:layout_constraintTop_toBottomOf="@id/label_drink" />

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/how_much_did_u_drink"
        app:layout_constraintTop_toBottomOf="@id/spinner_drink"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="50"
        android:valueTo="500"
        android:stepSize="50"
        app:layout_constraintTop_toBottomOf="@id/label_amount"
        />

    <EditText
        android:id="@+id/input_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lines="5"
        android:inputType="textMultiLine"
        android:hint="@string/notes"
        android:gravity="bottom"
        app:layout_constraintTop_toBottomOf="@id/slider_amount"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>